--- a/src/index.html
+++ b/src/index.html
@@ -341,7 +341,7 @@
               >
               等
             </li>
-            <li>了解 <strong>TypeScript、Webpack</strong></li>
+            <li>了解 <strong>TypeScript、Webpack、vite</strong></li>
             <li>
               掌握
               <strong>git、yarn/npm</strong> 的使用,熟练代码版本控制、部署流程
@@ -369,7 +369,8 @@
               2.
               负责系统设置、小程序装修两大模块的开发及维护，参与短视频智能生产的部分模块开发工作
             </p>
-            <p>3. 迁移直播管家项目中部分功能至TagVV</p>
+            <p>3. 相关功能的小程序开发</p>
+            <p>4. 迁移直播管家项目中部分功能至TagVV</p>
             <br />
             <p>项目名称： SumLive(直播管家)</p>
             <p>项目时间： 2021.6 - 2021.12</p>
@@ -384,26 +385,22 @@
             <p>3. 直播管家的后续需求及后期维护、以及直播管家插件、大屏的维护</p>
           </li>
           <li>
-            <header>
+            <header style="page-break-before: always">
               <h3>华夏视清数字技术（江苏）有限公司</h3>
               <h4>前端开发工程师</h4>
             </header>
+            <p>项目名称： 天津市特种设备动态信息监管系统</p>
+            <p>项目时间： 2020.7 - 2021.5</p>
+            <ul>
+              <li>负责整个监察系统项目（Vue2）的前端开发</li>
+              <!--          <li>基于elementUI组件开发自定义组件，包括单位选择框、省市区街道四级框、流程展示等</li>-->
+              <li>使用过vue-baidu-map、ECharts、流程图等插件</li>
+            </ul>
             <p>项目名称： 无锡智慧停车后台管理系统</p>
             <p>项目时间： 2020.5 - 2020.7</p>
             <ul>
               <li>
                 使用Vue2+Element独立完成无锡停车后台管理系统,与后端配合，完成页面的功能对接
-              </li>
-            </ul>
-            <p style="page-break-before: always">
-              项目名称： 天津市特种设备动态信息监管系统
-            </p>
-            <p>项目时间： 2020.7 - 2021.5</p>
-            <ul>
-              <li>负责整个监察系统项目（Vue2）的前端开发</li>
-              <!--          <li>基于elementUI组件开发自定义组件，包括单位选择框、省市区街道四级框、流程展示等</li>-->
-              <li>
-                使用过vue-baidu-map、ECharts、workflow-bpmn-modeler(流程图)等插件
               </li>
             </ul>
           </li>
