--- a/src/index.html
+++ b/src/index.html
@@ -333,19 +333,16 @@
             <li>
               熟练使用
               <strong>CSS/SCSS</strong>
-              ，掌握<strong>flex</strong>布局,学习过grid布局，对文档流、盒模型有充分了解
+              ，掌握<strong>flex</strong>布局,熟悉grid布局，对文档流、盒模型有充分了解
             </li>
             <li>
-              熟悉<strong>前后端分离</strong>技术，包括 AJAX、<strong
-                >JSONP、CORS</strong
-              >
-              等
+              熟悉<strong>前后端分离</strong>技术，包括 AJAX、JSONP、CORS 等
             </li>
-            <li>了解 <strong>TypeScript、Webpack、vite</strong></li>
             <li>
               掌握
               <strong>git、yarn/npm</strong> 的使用,熟练代码版本控制、部署流程
             </li>
+            <li>了解 <strong>TypeScript、Webpack、vite</strong></li>
           </ul>
         </div>
       </section>
@@ -369,7 +366,7 @@
               2.
               负责系统设置、小程序装修两大模块的开发及维护，参与短视频智能生产的部分模块开发工作
             </p>
-            <p>3. 相关功能的小程序开发</p>
+            <p>3. 相关功能的小程序开发（主要适配微信、飞书）</p>
             <p>4. 迁移直播管家项目中部分功能至TagVV</p>
             <br />
             <p>项目名称： SumLive(直播管家)</p>
@@ -392,9 +389,9 @@
             <p>项目名称： 天津市特种设备动态信息监管系统</p>
             <p>项目时间： 2020.7 - 2021.5</p>
             <ul>
-              <li>负责整个监察系统项目（Vue2）的前端开发</li>
+              <li>使用vue2+Element开发</li>
               <!--          <li>基于elementUI组件开发自定义组件，包括单位选择框、省市区街道四级框、流程展示等</li>-->
-              <li>使用过vue-baidu-map、ECharts、流程图等插件</li>
+              <li>使用baidu-map、ECharts、流程图等插件</li>
             </ul>
             <p>项目名称： 无锡智慧停车后台管理系统</p>
             <p>项目时间： 2020.5 - 2020.7</p>
@@ -432,11 +429,12 @@
             </header>
             <p>
               Manager是一款基于
-              <strong>React、React Router、自定义Hooks、webpack</strong>
+              <strong>React18、react-router-dom、自定义Hooks、webpack</strong>
               实现的极简的移动端记账应用。
             </p>
             <p>
-              使用到的主要技术栈 : styled-components、svg-sprite-loader、dayjs
+              主要技术栈 : styled-components(css in
+              js)、svg-sprite-loader(配置webpack使用svg)
             </p>
             <h4>项目总结</h4>
             <p>使用自定义Hooks 代替了Redux管理数据，对数据进行增删改查</p>
