--- a/src/index.html
+++ b/src/index.html
@@ -423,13 +423,15 @@
             <header>
               <h3>记账小程序</h3>
               <span>
-                <a href="https://github.com/Jokerguo/money-react">源码链接</a>
+                <a href="https://github.com/Jokerguo/react-demo">源码链接</a>
                 <span> 扫描二维码进行预览</span>
               </span>
             </header>
             <p>
               Manager是一款基于
-              <strong>React18、react-router-dom、自定义Hooks、webpack</strong>
+              <strong
+                >React18、react-router、自定义Hooks、webpack、LocalStorage</strong
+              >
               实现的极简的移动端记账应用。
             </p>
             <p>
@@ -437,7 +439,7 @@
               js)、svg-sprite-loader(配置webpack使用svg)
             </p>
             <h4>项目总结</h4>
-            <p>使用自定义Hooks 代替了Redux管理数据，对数据进行增删改查</p>
+            <p>使用自定义Hooks 代替了Redux进行数据管理，使用浏览器缓存数据</p>
             <p>
               这个项目的完成,让我对React函数组件的认识更加全面,对TypeScript也是慢慢了解。
             </p>
