--- a/src/index.html
+++ b/src/index.html
@@ -298,10 +298,10 @@
         src="https://i.loli.net/2020/03/26/YcJRNESgGkaXyZe.jpg"
         alt=""
         width="120"
-        height="150"
+        height="150"`
     />
     <p>郭东生</p>
-    <p>男 | 25岁 | 前端开发工程师 | 杭州</p>
+    <p>男 | 25岁 | 前端开发工程师 | 无锡</p>
     <p>
       手机: <a href="tel:18168896329">18168896329</a> | 微信号：joker__guo |
       邮箱：<a href="mailto:1977036313@qq.com">1977036313@qq.com</a>
@@ -341,9 +341,9 @@
         </li>
         <li>
           掌握
-          <strong>git、yarn/npm</strong> 的使用,熟练代码版本控制、部署流程
+          <strong>git、yarn/npm/pnpm</strong> 的使用,熟练代码版本控制、部署流程
         </li>
-        <li>了解 <strong>TypeScript、Webpack、vite</strong></li>
+        <li>项目中已经使用 <strong>TypeScript、Webpack、vite</strong></li>
       </ul>
     </div>
   </section>
@@ -372,9 +372,16 @@
     <ol>
       <li>
         <header>
+          <h3>杭州蓝川科技有限公司</h3>
+          <h4>高级前端工程师</h4>
+          <h4>（2022.5 - 至今）</h4>
+        </header>
+      </li>
+      <li>
+        <header>
           <h3>杭州星麦云商科技有限公司</h3>
           <h4>前端开发工程师</h4>
-          <h4>（2021.6 - 至今）</h4>
+          <h4>（2021.6 - 2022.5）</h4>
         </header>
       </li>
       <li>
@@ -390,12 +397,6 @@
           <h4>前端工程师（实习）</h4>
           <h4>（2019.9 - 2020.3）</h4>
         </header>
-        <!-- <span><time>2018年9月</time>~<time>2020年3月</time></span>
-        <ul>
-          <li>使用VUE+Element开发标注平台页面</li>
-          <li>负责维护标注平台的页面样式，兼容各浏览器</li>
-          <li>测试标注平台，并解决前端问题</li>
-        </ul>-->
       </li>
     </ol>
   </section>
@@ -404,19 +405,17 @@
     <h2>项目经历</h2>
     <ol>
       <li>
-        <p>项目名称： 视频生产（SumVideo）</p>
-        <p>项目周期： 2022.3 - 至今</p>
+        <p>项目名称： 风火递寄快递</p>
+        <p>项目周期： 2022.5 - 至今</p>
         <p>
-          项目描述：SumVideo提供内容生产到内容分发的一站式服务，加速企业短视频内容智能孵化
+          项目描述：支持多种快递寄件服务，如京东、顺丰等，以及查件服务。存在多个平台，如微信小程序，支付宝小程序，PC端。日活访问量稳定百万级以上。注重用户体验。
         </p>
         <p>我的职责：</p>
-        <p>1. 使用 <strong>Vue2+Element</strong>开发</p>
-        <p>
-          2. 负责流水线、创意素材、素材标签的模块开发工作
-        </p>
-        <p>3. 对应小程序的采集以及上传素材功能开发</p>
-        <p>4. 整个SumVideo的后续版本迭代以及维护工作</p>
-        <p>5. 接手客户端(electron)的维护工作</p>
+        <p>1. <strong>布置及协调</strong>部门内部前端的开发任务</p>
+        <p>2. 负责寄快递模块的<strong>主要研发</strong>工作</p>
+        <p>3. 整个项目<strong>语法重构</strong>,从wepy重构为wxml，后续使用uni-app</p>
+        <p>3. 跨部门合作开发功能</p>
+
       </li>
       <li style="page-break-before: always">
         <p>项目名称： 矩阵营销（TagVV）</p>
@@ -561,13 +560,10 @@
   </li> -->
     </ul>
   </section>
-
-  <!-- 教育经历 -->
   <section class="education">
     <h2>教育经历</h2>
     <p>
-      <span><time>2014年</time>~<time>2019年</time></span>
-      江苏联合职业技术学院 | 软件技术
+      <span>江苏开放大学 （学信网可查）</span>
     </p>
   </section>
 </article>
