--- a/src/index.html
+++ b/src/index.html
@@ -294,16 +294,16 @@
   <!--    个人信息-->
   <section class="bio">
     <h1>个人信息</h1>
-    <img
+    <!-- <img
         src="https://i.loli.net/2020/03/26/YcJRNESgGkaXyZe.jpg"
         alt=""
         width="120"
         height="150"`
-    />
+    /> -->
     <p>郭东生</p>
     <p>男 | 26岁 | 前端开发工程师 | 无锡</p>
     <p>
-      手机: <a href="tel:18168896329">18168896329</a> | 微信号：joker__guo |
+      手机: <a href="tel:13007439132">18168896329</a> | 微信号：joker__guo |
       邮箱：<a href="mailto:1977036313@qq.com">1977036313@qq.com</a>
     </p>
   </section>
@@ -372,30 +372,23 @@
     <ol>
       <li>
         <header>
+          <h3>无锡希霆云梦科技有限公司</h3>
+          <h4>高级前端工程师</h4>
+          <h4>（2024.4 - 2024.7）</h4>
+        </header>
+      </li> 
+      <li>
+        <header>
           <h3>杭州蓝川科技有限公司</h3>
           <h4>高级前端工程师</h4>
-          <h4>（2022.5 - 至今）</h4>
+          <h4>（2022.5 - 2024.2）</h4>
         </header>
-      </li>
+      </li> 
       <li>
         <header>
           <h3>杭州星麦云商科技有限公司</h3>
           <h4>前端开发工程师</h4>
-          <h4>（2021.6 - 2022.5）</h4>
-        </header>
-      </li>
-      <li>
-        <header>
-          <h3>华夏视清数字技术（江苏）有限公司</h3>
-          <h4>前端开发工程师</h4>
-          <h4>（2020.5 - 2021.5）</h4>
-        </header>
-      </li>
-      <li>
-        <header>
-          <h3>江苏丰华联合科技有限公司</h3>
-          <h4>前端工程师（实习）</h4>
-          <h4>（2019.9 - 2020.3）</h4>
+          <h4>（2020.5 - 2022.5）</h4>
         </header>
       </li>
     </ol>
@@ -408,16 +401,26 @@
         <p>项目名称： 风火递寄快递</p>
         <p>项目周期： 2022.5 - 至今</p>
         <p>
-          项目描述：支持多种快递寄件服务，如京东、顺丰等，以及查件服务。存在多个平台，如微信小程序，支付宝小程序，PC端。日活访问量稳定百万级以上。注重用户体验。
+          项目描述：支持多种快递寄件服务，如 <strong>京东、顺丰</strong> 等。存在多个平台，如微信小程序，支付宝小程序，PC端。日活访问量稳定百万级以上。注重用户体验。
         </p>
         <p>我的职责：</p>
         <p>1. <strong>布置及协调</strong>部门内部前端的开发任务</p>
         <p>2. 负责寄快递模块的<strong>主要研发</strong>工作</p>
         <p>3. 整个项目<strong>语法重构</strong>,从wepy重构为wxml，后续使用uni-app</p>
         <p>3. 跨部门合作开发功能</p>
-
       </li>
-      <li style="page-break-before: always">
+      <li  style="page-break-before: always">
+        <p>项目名称： 内部系统</p>
+        <p>项目周期： 2024.4 - 至今</p>
+        <p>
+          项目描述：内部管理系统
+        </p>
+        <p>我的职责：</p>
+        <p>1. 开发excel前端导出导入公共方法的封装</p>
+        <p>2. 全局组件(动态表格)</p>
+        <p>3. 抽奖活动h5的整体搭建以及开发,例如 <strong>大转盘，九宫格</strong> </p>
+      </li>
+      <li>
         <p>项目名称： 矩阵营销（TagVV）</p>
         <p>项目周期： 2021.12 - 至今</p>
         <p>
@@ -446,30 +449,13 @@
         </p>
         <p>3. 直播管家的后续需求及后期维护、以及直播管家插件、大屏的维护</p>
       </li>
-      <!--
-                <li>
-                  <p>项目名称： 天津市特种设备动态信息监管系统</p>
-                  <p>项目周期： 2020.7 - 2021.5</p>
-                  <ul>
-                    <li>使用vue2+Element开发</li>
-                    <li>基于elementUI组件开发自定义组件供全局使用，包括单位选择框、省市区街道四级框、流程展示等</li>
-                    <li>使用baidu-map、ECharts、流程图等插件</li>
-                  </ul>
-                  <p>项目名称： 无锡智慧停车后台管理系统</p>
-                  <p>项目时间： 2020.5 - 2020.7</p>
-                  <ul>
-                    <li>
-                      使用Vue2+Element独立完成无锡停车后台管理系统,与后端配合，完成页面的功能对接
-                    </li>
-                  </ul>
-                </li> -->
     </ol>
   </section>
   <!-- 开源项目 -->
   <section class="openSource">
     <h2>开源项目</h2>
     <ul>
-      <li class="qrcode">
+      <!-- <li class="qrcode">
         <header>
           <h3>记账小程序</h3>
           <span>
@@ -497,7 +483,7 @@
             src="https://i.loli.net/2021/05/19/2YBtAC5Une18sML.png"
             alt="记账小程序"
         />
-      </li>
+      </li> -->
       <li>
         <header>
           <h3>UI 组件库</h3>
